--- a/Platforms/GTK/Todo.GTK.csproj
+++ b/Platforms/GTK/Todo.GTK.csproj
@@ -120,10 +120,6 @@
     <None Include="Resources\logo.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\..\Heleus.AppBase\Misc\libSkiaSharp.so">
-      <Link>libSkiaSharp.so</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Include="Resources\heleus.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -139,15 +135,15 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Heleus.Base\Heleus.Base.csproj">
-      <Project>{74862847-A7F2-47AE-9BE4-1CC81943DDFE}</Project>
+      <Project>{214C950E-1777-41A3-892B-CAB0DBA8FF89}</Project>
       <Name>Heleus.Base</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\Heleus.Services\ProfileServiceBase\Heleus.ProfileServiceBase.csproj">
-      <Project>{F2739350-AB5A-4E12-AEC6-215413F2FCBB}</Project>
+      <Project>{7BEEE50E-FE0F-4A12-B5FC-3A2EB144EC2F}</Project>
       <Name>Heleus.ProfileServiceBase</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\Heleus.Services\TodoServiceBase\Heleus.TodoServiceBase.csproj">
-      <Project>{18DB3CCD-15EE-4960-ABE7-C7E0CA978635}</Project>
+      <Project>{89D2EA99-FFF3-4002-A5D6-0B98499B193F}</Project>
       <Name>Heleus.TodoServiceBase</Name>
     </ProjectReference>
   </ItemGroup>
@@ -162,4 +158,5 @@
   <Import Project="..\..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
   <Import Project="..\..\packages\SkiaSharp.1.68.1.1\build\net45\SkiaSharp.targets" Condition="Exists('..\..\packages\SkiaSharp.1.68.1.1\build\net45\SkiaSharp.targets')" />
   <Import Project="..\..\packages\Xamarin.Forms.4.4.0.991640\build\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.4.4.0.991640\build\Xamarin.Forms.targets')" />
+  <Import Project="..\..\packages\SkiaSharp.NativeAssets.Linux.1.68.1.1\build\net45\SkiaSharp.NativeAssets.Linux.targets" Condition="Exists('..\..\packages\SkiaSharp.NativeAssets.Linux.1.68.1.1\build\net45\SkiaSharp.NativeAssets.Linux.targets')" />
 </Project>
